syntax = "proto3";

package message_storage.v1;

import "google/protobuf/timestamp.proto";

// The message storage service service definition.
service MessageStorage {
  // Sends a message
  rpc SendMessage (MessageRequest) returns (MessageResponse) {}
}

// The request message
message MessageRequest {
  string key = 1;
  string tenant = 2;
}

// The response message
message MessageResponse {
  google.protobuf.Timestamp timestamp = 1;
  uint32 id = 2;
  bool new = 3;
}